set fixed height and overflow-y auto for description box

--- a/client/src/components/ProjectPage/ProjectPage.sass
+++ b/client/src/components/ProjectPage/ProjectPage.sass
@@ -15,3 +15,5 @@
   .description
     .ck-blurred, .ck, .ck-content, .ck-editor__editable, .ck-rounded-corners, .ck-editor__editable_inline
       color: darkgray;
+      height: 200px;
+      overflow-y: auto;
